[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pike-smb2"
description = "Pure python SMB client"
authors = [
    {name = "Masen Furer", email = "m_github@0x26.net"},
    {name = "Brian Koropoff", email = "Brian.Koropoff@emc.com"},
]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*"
dependencies = [
    'enum34~=1.1.6;  python_version ~= "2.7"',
    'pathlib2~=2.3.5;  python_version ~= "2.7"',
    "attrs >= 19.3",
    "future",
    "pycryptodome",
    "six",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",

]
keywords = ["smb", "smb-testing", "smb-client"]
dynamic = ["version", "readme"]

[project.entry-points.pytest11]
pike = "pike.pytest_support"

[project.urls]
Homepage = "https://github.com/emc-isilon/pike"
Source = "https://github.com/emc-isilon/pike"
"Bug Reports" = "https://github.com/emc-isilon/pike/issues"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
