[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
# skip x86 pypi since pycryptodome packages
# are broken on these playforms (at least py37)
skip = ["pp*-manylinux_i686"]
before-test = ["{project}/samba/krb5.conf.sh"]
test-command = [
  "export PIKE_SERVER=$SAMBA_SERVER",
  "export PIKE_SHARE=s1",
  "python -m unittest pike.test.session",
]

[tool.cibuildwheel.linux]
environment-pass = ["HOST_IPV4", "SAMBA_REALM", "SAMBA_SERVER", "ADMIN_PASSWORD"]
before-all = "yum install -y krb5-devel krb5-workstation"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add krb5 krb5-dev"
