[metadata]
name = pike-smb2
description = "Pure python SMB client"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = "Brian Koropoff"
author_email = "Brian.Koropoff@emc.com"
maintainer = "Masen Furer"
maintainer_email = "m_github@0x26.net"
license = Simplified BSD License
url = https://github.com/emc-isilon/pike
project_urls =
    Source = https://github.com/emc-isilon/pike
    Bug Reports = "https://github.com/emc-isilon/pike/issues
platforms = unix, linux, osx, cygwin, win32
keywords = smb, smb-testing, smb-client
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: BSD License

[options]
install_requires =
    enum34~=1.1.6;  python_version ~= "2.7"
    pathlib2~=2.3.5;  python_version ~= "2.7"
    attrs >= 19.3
    future
    pycryptodome
    six
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
pytest11 = 
    pike = pike.pytest_support
